ctf_k8/templates/kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctfd-frontend-service
spec:
  selector:
    app: ctfd-frontend
  ports:
    - port: 8000
      targetPort: 8000
